--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,27 @@
 {
-    "builds":[{
-        "src" : "tamilbuddy/wsgi.py",
-        "use" : "@vercel/python",
-        "config" :{ "maxLambdaSize": "15mb" , "runtime": "python3.12"}
-    }],
-    "routes" :[
+    "builds": [{
+        "src": "tamilbuddy/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "static"
+      }
+    }
+    ],
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },    
+
         {
             "src": "/(.*)",
             "dest": "tamilbuddy/wsgi.py"
         }
-    ]
-
+    ],
+    "outputDirectory": "static"
 }
