--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,27 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "tamilbuddy/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "static"
+    "version": 2,
+    "builds": [
+      {
+        "src": "tamilbuddy/wsgi.py",
+        "use": "@vercel/python",
+        "config": {"maxLambdaSize": "15mb", "runtime": "python3.12"}
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles"
+        }
       }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "tamilbuddy/wsgi.py"
-    }
-  ],
-  "outputDirectory": "static"
-}
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "tamilbuddy/wsgi.py"
+      },
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      }
+    ]
+  }
